--- a/KaranSinMorsommeFerie/A Hoved Database/klesplagg.css
+++ b/KaranSinMorsommeFerie/A Hoved Database/klesplagg.css
@@ -1,13 +1,158 @@
+/*css for forskjellige deler når nettsiden er under 600px starter under her*/
+@media only screen and (max-width: 600px) {
+
+  body {
+    /*bakgrunnsfarge og beholder plassering*/
+    background-color: #dbdde0;
+    margin: 0px;
+    top: 0px;
+  }
+
+  /*css for .lang er den hvite linjen øverst på siden starter under her*/
+  .lang {
+    /* skjuler*/
+    display: none;
+  }
+
+  .bilde_liten{
+  display: none;
+
+  }
+
+  .header_øverst {
+    /* Lager en grid. */
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    /*gir en bredde på 100% og text plasseres sentralt*/
+    width: 100%;
+    text-align: center;
+  }
+
+  .logo>a>img {
+    /* Lager en grid. */
+    grid-template-columns: repeat(1, 1fr);
+    grid-row: span 1;
+    grid-column: span 3;
+    width: 150px;
+    height: 120px;
+    padding-top: 20px;
+  }
+
+  /*css for ønskeliste, handlekurv og logginn starter under her*/
+  .lenke {
+    /* Lager en grid. */
+    grid-template-columns: repeat(1, 1fr);
+    grid-row: span 1;
+    grid-column: span 3;
+    /*legger text sentralt*/
+    text-align: center;
+  }
+
+  .usynlig, .usynlig1 {
+    /* skjuler*/
+    display: none;
+  }
+
+  .søkemotor {
+    /* skjuler*/
+    display: none;
+  }
+
+  /*css for navigasjon baren er under her  starter under her*/
+  .navigation {
+    /* Lager en grid. */
+    grid-template-columns: repeat(1, 1fr);
+    grid-row: span 1;
+    grid-column: span 6;
+    /*holder plasseringen sin og tekst ligger sentralt*/
+    margin-left: 0px;
+    padding-left: 0px;
+    text-align: center;
+    width: auto;
+  }
+
+  .dropned-content {
+    /* skjuler*/
+    display: none;
+  }
+
+  #main {
+    /* Lager en grid. */
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    /* gjør så main ikke har noe ekstra margin utenfor eller paddin inni*/
+margin-bottom: 300px;
+    padding: 0px;
+  }
+
+  .handlekurv_knapp {
+    border-radius: 3px;
+    border-color: black;
+    margin-top: 90px;
+    padding: 20px;
+    width: 100%;
+    font-size: 20px;
+    background-color: #333333;
+    color: white;
+  }
+
+  /*css for varene under nyheter i main starter under her*/
+  #main>.vare {
+    /* 100% i bredde*/
+    width: 100%;
+    /* styler tekst til å være i midten*/
+    text-align: center;
+  }
+
+  .navn_varer{
+    margin: 20px;
+  }
+.handlekurv_knapp{
+  margin-left: 140px;
+}
+
+.lignendeProdukter{
+  display: none;
+}
+
+.seclignendeProdukter{
+display: none;
+}
+
+.reklame2>a>img {
+  display: none;
+}
+.hele_footer {
+  background-color: black;
+  color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-decoration: none;
+  font-weight: normal;
+  padding: 20px 40px;
+}
+
+.sosial_footer{
+  display: none;
+}
+.sosbilder{
+/* skjuler*/
+display: none;
+}
+}
+
+/*koding for css med vanlig størrelse starter her*/
 body {
   margin: 0px;
   top: 0px;
   background-color: #dbdde0
 }
-
 header {
+  /*bakgrunnbilde i header*/
   background-image: url(bilder_klær_riktig/bg-1.jpg);
 }
-
+/* den delen av header over søkfelter sine handlekurv, ønskeliste og logg inn knapp */
+@media only screen and (min-width: 600px) {
 .header_øverst {
   text-align: center;
   display: grid;
@@ -17,7 +162,9 @@ header {
   font-size: 20px;
   font-weight: bold;
 }
+}
 
+/*css for den hvite linjen øverst starter under her*/
 .header_øverst>.lang {
   grid-column: span 12;
   background-color: white;
@@ -37,7 +184,7 @@ mark {
   margin-top: 99px;
   font-size: 15px;
 }
-
+@media only screen and (min-width: 600px) {
 .logo {
   width: 150px;
   height: 120px;
@@ -47,7 +194,8 @@ mark {
   padding-bottom: 15px;
   grid-column: span 4;
 }
-
+}
+/* teksten under logg inn, handlekurv og ønskeliste knappen i den delen av header over søkfelter sine handlekurv, ønskeliste og logg inn knapp */
 .header_øverst>.lenke {
   font-size: 13px;
   margin: 10px;
@@ -69,22 +217,27 @@ mark {
   color: black;
   text-decoration: none;
 }
-
+/* Når man hoverer over a på teksten under logg inn, handlekurv og ønskeliste knappen i den delen av header over søkfelter sine handlekurv, ønskeliste og logg inn knapp */
 .header_øverst>.lenke>a:hover {
+  /* styler tekst*/
   color: darkgrey;
   text-decoration: underline;
+  /* styler overgangsmåte og type ved hover*/
   transition: all ease-in-out 350ms;
 }
 
 .iconbilde {
+  /* endrer størrelse*/
   width: 30px;
 }
 
 .søkemotor {
+  /* styler type boks*/
   box-sizing: border-box;
 }
 
 .søkemotor>[type=text] {
+  /* styler tekst og endrer plasseing og farge*/
   padding: 10px;
   font-size: 17px;
   border: 1px solid grey;
@@ -94,6 +247,7 @@ mark {
 }
 
 .søkemotor>[type=submit] {
+  /* styler tekst og endrer plasseing og farge*/
   float: left;
   width: 60px;
   padding: 10px;
@@ -107,19 +261,25 @@ mark {
 }
 
 .søkemotor {
+  /*endrer plasseing*/
   grid-column: span 1;
   margin-left: 580px;
   margin-top: 30px;
 }
-
+/*css for navigasjon med dropned baren starter her, det er altså den delen under starter under her*/
+@media only screen and (min-width: 600px) {
 .navigation {
-  text-align: center;
+  /* Lager en grid. */
   display: grid;
   grid-template-columns: repeat(6, 1fr);
+  /*endrer plasseing*/
   padding-top: 60px;
   padding-bottom: 0px;
   padding-left: 290px;
   padding-right: 290px;
+  /*styler tekst*/
+  text-align: center;
+}
 }
 
 .navigation a {
@@ -131,6 +291,7 @@ mark {
 }
 
 .dropned {
+  /* endrer plasseing*/
   float: center;
   overflow: hidden;
   padding-bottom: 50px;
@@ -138,6 +299,7 @@ mark {
 }
 
 .dropned>a {
+  /* styler tekst og endrer plasseing og farge*/
   position: relative;
   color: #000;
   text-decoration: none;
@@ -145,10 +307,12 @@ mark {
 }
 
 .dropned>a:hover {
+  /*endrer farge av tekst ved hover*/
   color: black;
 }
 
 .dropned>a::before {
+  /* styler tekst og endrer plasseing og bakgrunnsfarge*/
   content: "";
   position: absolute;
   width: 100%;
@@ -156,6 +320,7 @@ mark {
   bottom: 0;
   left: 0;
   background-color: #000;
+  /* funksjoner for å skalere elementer og overgangs tid*/
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
@@ -164,12 +329,14 @@ mark {
 }
 
 .dropned>a:hover::before {
+  /* funksjoner for å skalere elementer*/
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
 }
 
 .dropknapp {
+  /* styler tekst og endrer plasseing*/
   border: none;
   outline: none;
   background-color: inherit;
@@ -179,21 +346,25 @@ mark {
   font-size: 20px;
   font-weight: bold;
 }
-
+@media only screen and (min-width: 600px) {
 .dropned-content {
-  display: none;
   position: absolute;
   background-color: #b8d0ce;
+  /* skygge*/
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  /* skjuler*/
+  display: none;
 }
-
+}
 .dropned-content a {
+  /* styler tekst og endrer plasseing*/
   float: none;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
+  /* skygge */
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -211,146 +382,28 @@ img {
   width: 210px;
 }
 
-/*Main*/
-/*
-
-
-*/
-.valg_klær1, #valg_klær1 {
-  display: grid;
-  background-color: #fff2ea;
-  grid-template-columns: repeat(5, 1fr);
-  margin: 0px 50px;
-  padding: 25px;
-}
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #3e8e41;
-}
-
-/* The search field */
-#myInput {
-  border-box: box-sizing;
-  background-image: url('searchicon.png');
-  background-position: 14px 12px;
-  background-repeat: no-repeat;
-  font-size: 16px;
-  padding: 14px 20px 12px 45px;
-  border: none;
-  border-bottom: 1px solid #ddd;
-}
-
-/* The search field when it gets focus/clicked on */
-#myInput:focus {
-  outline: 3px solid #ddd;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-  width: 200px;
-  padding: 20px;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f6f6f6;
-  min-width: 230px;
-  border: 1px solid #ddd;
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #f1f1f1
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {
-  display: block;
-}
-
 .h1_over {
   padding: 15px;
 }
 
-.klær_hoved {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: bold;
-  margin: 10px 50px;
-  background-color: #fff2ea;
+.tilbake_knapp {
+  margin-top: 20px;
+  margin-left: 50px;
+  padding: 10px;
+  font-size: 20px;
 }
 
-.tabell_full {
-  grid-row: span 4;
-  grid-column: span 0.8;
-}
-
-.klær_tekst {
-  color: black;
-  text-decoration: none;
-  padding-left: 10px;
-  font-size: 30px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-.tabell_halv {
-  list-style-type: none;
-  text-align: left;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 5px;
-  padding-top: 50px;
-}
-
-.tabell_ord {
-  text-decoration: none;
-  padding-left: 30px;
-  font-weight: normal;
-  text-transform: lowercase;
-  font-size: 24px;
-  font-style: normal;
-  font-family: monospace;
-}
-
-.tabell_ord:hover {
-  text-decoration: underline;
-  color: grey;
-}
-
-main {
+/*Main*/
+/*css for main større enn 600px starter under her*/
+@media only screen and (min-width: 600px) {
+#main {
   text-align: center;
   display: grid;
   grid-template-columns: repeat(24, 1fr);
   margin: 30px 50px;
   background-color: #fff2ea;
   padding-top: 40px;
+}
 }
 
 .bilde_liten {
@@ -359,11 +412,30 @@ main {
   height: 50%;
 }
 
-
-
 .bilde_liten>img {
   height: 50%;
 }
+
+.bilde_liten1:hover{
+    -moz-transform: scale(5);
+    -webkit-transform: scale(3);
+    transform: scale(2.1);
+    transform-origin: top center;
+    -webkit-transition: all 0.4s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+    margin-left: 82px;
+}
+
+.bilde_liten2:hover{
+    -moz-transform: scale(5);
+    -webkit-transform: scale(3);
+    transform: scale(2.1);
+    transform-origin: bottom center;
+    -webkit-transition: all 0.4s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+    margin-left: 82px;
+}
+
 
 .bilde_stor {
   grid-row: span 4;
@@ -413,76 +485,105 @@ main {
   margin-left: 120px;
   margin-top: 10px;
 }
-
-
+@media only screen and (min-width: 600px) {
+/*Knapp for å sende inn vare*/
 .handlekurv_knapp {
   border-radius: 3px;
   border-color: black;
-  margin-top: 90px;
+  margin: 90px;
+  width: 400px;
   padding: 20px;
-  width: 80%;
   font-size: 20px;
   background-color: #333333;
   color: white;
 }
-
-
+}
 
 button:focus {
-background-color: green;
+  background-color: green;
 }
 
 
-.reklame2>a>img {
-  width: 100%;
-  height: 300px;
-  transition: 0.8s;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+/* start på lignende produkter del*/
+@media only screen and (min-width: 600px) {
+.lignendeProdukter{
+  font-size: 39px;
+  text-decoration: underline;
+text-align: center;
 }
-
-.hele_footer {
-  background-color: black;
-  color: white;
+.seclignendeProdukter{
+  /* Lager en grid i lignendeProdukter */
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  /* styler tekst. */
   text-decoration: none;
-  font-size: 14px;
-  font-weight: normal;
-  padding: 40px 100px;
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: bold;
+  text-align: center;
+  /* endrer plassering og bakgrunn */
+  margin: 30px 50px;
+  background-color: #fff2ea;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 40px;
+}
 }
 
-th>a {
+.lignende_hvert_produkt{
+grid-column: span 1;
+  padding: 15px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  margin: 3px;
+
+}
+
+.vare:hover {
+  -moz-box-shadow: 0 0 20px black;
+  -webkit-box-shadow: 0 0 10px black;
+  box-shadow: 0 0 10px black;
+}
+
+/*css for bildene i varene starter under her*/
+.bilde_liten_lignende{
+  width: 100%;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.bilde_liten_lignende:hover{
+ -moz-transform: scale(1.2);
+   -webkit-transform: scale(1.2);
+   transform: scale(1.1);
+}
+
+.lignende_info{
+  margin-top:40px;
+  padding-top: 0px;
+}
+.link_lignende>.navn_varer{
+font-size: 16px;
+}
+
+.link_lignende>.pris_varer{
+font-size: 20px;
+}
+
+.tilbakemelding_lignende{
+text-align: center;
+color: grey;
+font-size: 14px;
+text-decoration: none;
+}
+
+.link_lignende{
+  color: black;
   text-decoration: none;
-  color: white;
 }
 
-td>a {
-  text-decoration: none;
-  color: white;
-}
-
-.sosbilder {
-  width: 40px;
-  height: 40px;
-  border-radius: 15px;
-  margin: 15px;
-}
-
-thead {
-  text-decoration: underline;
-  font-size: 18px;
-}
-
-tbody {
-  font-style: normal;
-  font-size: 13px;
-  font-family: monospace;
-  font-weight: lighter;
-  text-transform: lowercase;
-}
-
+/* slutt på lignende produkter del*/
+@media only screen and (min-width: 600px) {
+/*reklame rett over footer*/
 .reklame2>a>img {
   width: 100%;
   height: 300px;
@@ -491,7 +592,10 @@ tbody {
   background-position: center;
   background-size: cover;
 }
+}
 
+@media only screen and (min-width: 600px) {
+/* footer starter her*/
 .hele_footer {
   background-color: black;
   color: white;
@@ -501,30 +605,35 @@ tbody {
   font-weight: normal;
   padding: 60px 100px;
 }
+}
 
 th>a {
+  /* styler tekst. */
   text-decoration: none;
   color: white;
 }
 
 td>a {
+  /* styler tekst. */
   text-decoration: none;
   color: white;
 }
-
+@media only screen and (min-width: 600px) {
 .sosbilder {
   width: 40px;
   height: 40px;
   border-radius: 15px;
   margin: 15px;
 }
-
+}
 thead {
+  /* styler tekst. */
   text-decoration: underline;
   font-size: 22px;
 }
 
 tbody {
+  /* styler tekst. */
   font-style: normal;
   font-size: 18px;
   font-family: monospace;
