--- a/KaranSinMorsommeFerie/A Hoved Database/main.css
+++ b/KaranSinMorsommeFerie/A Hoved Database/main.css
@@ -110,8 +110,10 @@
 
   .nyheter_forside_overskrift {
     /*endre plassering og gir den en bredde i prosent*/
-    width: 55%;
+    width: 100%;
     margin: 0px;
+
+
   }
 
   .nyheter_forside {
@@ -123,7 +125,7 @@
     text-align: center;
     /* Lager en grid. */
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
   }
 
   main {
@@ -135,23 +137,50 @@
     padding: 0px;
   }
 
-  /*css for varene under nyheter i main starter under her*/
+  /*css for varene under nyheter i main starter under her under width 600*/
   main>.vare {
     /*holder plasseringen sin*/
     margin: 0px;
-    padding: 0px;
+    padding:20px 0px;
     /* 100% i bredde*/
     width: 100%;
     /* styler tekst til å være i midten*/
     text-align: center;
   }
 
-  .footer_og_video {
+  footer{
+    display: block;
+  }
+  video{
+    display: none;
+  }
+
+  .content{
+  }
+
+  .hele_footer {
+    background-color: black;
+    color: white;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    text-decoration: none;
+    font-weight: normal;
+    padding: 20px 40px;
+  }
+
+  .sosial_footer {
+    display: none;
+  }
+
+  .sosbilder {
     /* skjuler*/
     display: none;
   }
 }
 
+
+
+/*css for vanlig koding som ikke har en max størrelse starter under her*/
 header {
   /* bakgrunnbilde til header*/
   background-image: url(bilder_klær_riktig/bg-1.jpg);
@@ -172,7 +201,7 @@ header {
   }
 }
 
-/*css for vanlig koding som ikke har noen begrenset størrelse starter under her*/
+
 /*css for den hvite linjen øverst starter under her*/
 .header_øverst>.lang {
   /*endrer plasseing*/
@@ -212,7 +241,7 @@ mark {
   }
 }
 
-/* den delen av header over søkfelter sine handlekurv, ønskeliste og logg inn knapp */
+/* den delen av header over søkfeltet og inneholder handlekurv, ønskeliste og logg inn knapp og logo */
 .header_øverst>.lenke {
   /* styler tekst og endrer plasseing*/
   font-size: 13px;
@@ -226,6 +255,7 @@ mark {
   grid-column: span 2;
 }
 
+/*teksten under logg inn, handlekurv og ønskeliste knappen i den delen av header over søkfelter sine handlekurv, ønskeliste og logg inn knapp */
 .header_øverst>.lenke {
   /* styler tekst og endrer plasseing*/
   align-self: center;
@@ -233,6 +263,7 @@ mark {
   margin-top: 50px;
 }
 
+/* Når man hoverer over a på teksten under logg inn, handlekurv og ønskeliste knappen i den delen av header over søkfelter sine handlekurv, ønskeliste og logg inn knapp */
 .header_øverst>.lenke>a {
   /* styler tekst*/
   color: black;
@@ -370,12 +401,12 @@ mark {
 
 @media only screen and (min-width: 600px) {
   .dropned-content {
-    /* skjuler*/
-    display: none;
     position: absolute;
     background-color: #b8d0ce;
     /* skygge*/
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    /* skjuler*/
+    display: none;
   }
 }
 
@@ -615,18 +646,22 @@ img {
   /* styler tekst. */
   font-size: 18px;
 }
-
+.pris_varer_salg{
+color: red;
+font-size: 18px;
+}
 /*css for reklame video og footer starter under her*/
 #myVideo {
   margin-left: 300px;
   height: 30%;
   width: 60%;
 }
-
+@media only screen and (min-width: 600px) {
 .footer_og_video {
   position: absolute;
 }
-
+}
+@media only screen and (min-width: 600px) {
 .content {
   position: absolute;
   bottom: 0;
@@ -635,9 +670,11 @@ img {
   width: 97.4%;
   padding: 20px;
 }
+}
 
+/*Footer starter her*/
+@media only screen and (min-width: 600px) {
 .hele_footer {
-  color: white;
   /* Lager en grid. */
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -646,6 +683,8 @@ img {
   font-size: 14px;
   font-weight: normal;
   padding: 170px 100px;
+  color: white;
+}
 }
 
 th>a {
@@ -660,11 +699,13 @@ td>a {
   color: white;
 }
 
+@media only screen and (min-width: 600px) {
 .sosbilder {
   width: 40px;
   height: 40px;
   border-radius: 15px;
   margin: 15px;
+}
 }
 
 thead {
